@@ -1,6 +1,7 @@
 # ChangeLog
 
 0.7.0rc4
+    * Fixed printer sends info about api key change to Connect after change
 
 0.7.0rc3 (2023-03-09)
     * Added v1 endpoints for flat filesystem structure, old struct is moved to
